tests/miniJava/neg/006795_mutation.MiniJava
class java void public static void Main ( String [ ] java ) { { } } }
